# nephq2

./: .gitmodules  CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  LICENSE.md  NephQ2-PlusExternal.sln  NephQ2.sln  README.md  appveyor.yml  quake2.vcxproj  quake2vr.sln
Source/: GameEngine.cpp  GameEngine.h  GameTimer.cpp  GameTimer.h  Main.cpp  Shared.h  SystemMessage.cpp  SystemMessage.h  SystemTimer.cpp  SystemTimer.h
backends/sdl2/: gl_sdl2.c  snd_sdl2.c  sys_sdl2.c  vid_sdl2.c
backends/win32/: conproc.c  net_wins.c
client/: cl_effects.c  cl_input.c  cl_keys.c  cl_main.c  cl_parse.c  cl_screen.c  cl_string.c  client.h
client/renderer/: r_alias.c  r_fbo.c  r_fragment.c  r_main.c  r_model.c  r_particle.c  r_shaderobjects.c  r_surface.c  r_vr.c  r_vr_svr.c  r_warp.c
client/renderer/include/: r_local.h
client/sound/: ogg.c  openal.c
client/ui/: ui_backend.c  ui_mp_startserver.c  ui_options_interface.c  ui_options_screen.c  ui_video.c  ui_video_advanced.c
client/vr/: vr_main.c  vr_ovr.c  vr_svr.c
client/vr/oculus_dynamic/: oculus_dynamic.c  oculus_dynamic.h
qcommon/: cmd.c  cmodel.c  common.c  cvar.c  files.c  net_chan.c  qcommon.h  stable.c
qcommon/nflibs/: nf_string_table.c
qcommon/shared/: game.h  q_shared.c  q_shared.h
server/: sv_main.c  sv_send.c  sv_user.c  sv_world.c
